# homelab-registry-mcp

./: .ansible-lint  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  _tool_test_runner.py  docker-compose.yml  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/prompts/: branch-workflow.prompt.md  session-start.prompt.md  sync-template.prompt.md  troubleshoot.prompt.md
.github/workflows/: ci.yml  deploy.yml  publish.yml  release-please.yml
ansible/: README.md
ansible/playbooks/: deploy.yml
docs/: SETUP.md
docs/ARDs/: ADR-001-Homelab-Control-Plane.md  ADR-002-Client-Interfaces.md  ARD-003-OOBE-Decisions.md  ARD-003-oobe.md  ARD-004-Upstream-Version-Detection-and-Update-Proposals.md  README.md
docs/SOPs/: README.md  SOP-001-Deploy-New-Service.md
docs/Security Reviews/: Review-Jun10.md
docs/api/: README.md
docs/plans/: README.md  (+2 more)
examples/: services.example.yaml
scripts/: README.md  bootstrap.sh  install.sh  reset-node.sh  setup-ansible-inventory.sh  setup-homelab-repo.sh
tests/: README.md  conftest.py  test_adoption.py  test_ansible_facts.py  test_authentik.py  test_discovery.py  test_events.py  test_hardware.py  test_hardware_discover_now.py  test_health.py  test_linking.py  test_proposal_engine.py  test_proposal_generator.py  test_proposal_tools.py  test_providers_git.py  test_providers_notification.py  test_reasoning.py  test_reconcile_reasoning.py  test_registry_tools.py  test_secrets.py  test_store.py  test_traefik.py
(+73 files in other folders)
