[project]
name = "homelab-registry-mcp"
version = "0.6.1"
description = "MCP server acting as the authoritative catalog of homelab services"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Team Castaldi" }]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlmodel>=0.0.22",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "docker>=7.0",
    "dspy>=2.6",
]

[project.scripts]
registry-mcp = "registry_mcp.server:main"
registry-mcp-seed = "registry_mcp.seed:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/registry_mcp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"
# Root-level scratch script committed for ad-hoc tool testing; not package code.
extend-exclude = ["_tool_test_runner.py"]

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
